test/ui/tests/fail/class-channel-in-sync.stderr
error: Unexpected `Channel` in sync method. Use `&mut FunctionContext` for sync methods, or `Channel` in async/task methods.
 --> tests/fail/class-channel-in-sync.rs:5:27
  |
5 |     fn method(&self, _ch: Channel) {}
  |                           ^^^^^^^

error[E0412]: cannot find type `Channel` in this scope
 --> tests/fail/class-channel-in-sync.rs:5:27
  |
5 |     fn method(&self, _ch: Channel) {}
  |                           ^^^^^^^ not found in this scope
  |
help: consider importing this struct
  |
1 + use neon::prelude::Channel;
  |

error[E0277]: the trait bound `Example: Default` is not satisfied
 --> tests/fail/class-channel-in-sync.rs:3:1
  |
3 | #[neon::class]
  | ^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Example`
  |
  = note: this error originates in the attribute macro `neon::class` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Example` with `#[derive(Default)]`
  |
1 + #[derive(Default)]
2 | struct Example;
  |
